Moved margin override back into universal selector Fixes spacing regressions - Card now uses rem - Hero description now uses proper font size (24px/medium) - bg-hero edge feathering reduced - Hero/card spacing WIP

--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@
 }
 
 
+/* The wildcard/universal selector doesn't take into account pseudo-elements so they must be specified explicitly */
+*, *:after {
+    /* Override default margins put in place by certain browser stylesheets */
+    margin: 0
+}
+
 body {
     /* 1200px (desktop PSD) / 16px (1rem default) = 75 */
     --max-content-width: 75rem;
@@ -30,9 +36,6 @@ body {
     --fs-lg: 2.25rem;
     --fs-md: 1.5rem;
     --fs-sm: 1rem;
-
-    /* Override default margins put in place by certain browser stylesheets */
-    margin: 0;
 
     font-family: "Montserrat", sans-serif;
 
@@ -146,7 +149,7 @@ footer {
     /* Header height, to offset navbar */
     top: 1.8rem;
     z-index: 100;
-    /* Hacky usability solution in the absence of a hamburger menu;
+    /* HACK: usability solution in the absence of a hamburger menu;
         prevents horizontal on narrow screens, instead allowing the navbar to be scrolled */
     overflow: auto;
 
@@ -206,17 +209,18 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 9rem;
+    gap: 8rem;
 
-    /* Top 8.8rem (header + navbar), l/r auto [centered], 4.5rem (72px) before cards */
+    /* Top 8.8rem (header + navbar) + 8rem (gap), l/r auto [centered], 4.5rem (72px) before cards */
     /* TODO: Consider overhaul for percentage (or similar); mobile margin is much smaller */
-    margin: 8.8rem auto 4.5rem;
+    margin: 16.8rem auto 4.5rem;
 }
 
 
 /**************
  *    HERO    *
  **************/
+/* TODO: Consider debugging/fixing left clipping if under min-width */
 .hero-bg-container {
     width: 100vw;
     height: auto;
@@ -241,11 +245,15 @@ footer {
 
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.8rem;
 }
 
 .hero-title {
     font-size: var(--fs-lg);
+}
+
+.hero-description {
+    font-size: var(--fs-md);
 }
 
 .hero-buttons {
@@ -330,7 +338,7 @@ footer {
  *    CARDS    *
  ***************/
 .card-container {
-    /* 1980px / 16 = 123.75, scale up*/
+    /* 1980px / 16 = 123.75, scale up */
     max-width: 124rem;
 
     display: flex;
@@ -345,9 +353,8 @@ footer {
     box-shadow: 0 20px 27px -27px;
 }
 
-/* TODO: Consider converting to rem (while keeping background scale in mind) */
 .card {
-    max-width: 862px;
+    max-width: 62rem;
     /* TODO: May need to implement a fallback if supporting legacy browsers, only became widely supported in 2021 */
     /* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/aspect-ratio#browser_compatibility */
     aspect-ratio: 3/2;
@@ -359,14 +366,13 @@ footer {
     text-align: center;
 
     display: flex;
-    /* TODO Comment describing AR calculations
-         862/1.5 = 574.66, round down. 3/1.5 = 2, so 3:2. But why? And why 862px? */
-    flex-basis: 574px;
+    /* 3/2 = 1.5, 62rem/1.5 = 41.333333rem, round down for easier calculation */
+    flex-basis: 41rem;
     flex-grow: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 
     background-repeat: no-repeat;
     background-size: cover;
